--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ws-server",
+  "name": "mock-service",
   "version": "0.0.0",
   "scripts": {
     "build": "npx ts-node build.ts",
@@ -9,8 +9,8 @@
     "dev": "nodemon",
     "test": "nodemon --config ./spec/nodemon.json",
     "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec",
-    "docker:build": "npm run build && docker build -t bestscooter.azurecr.io/ws-server .",
-    "docker:push": "az acr login --name bestscooter && docker push bestscooter.azurecr.io/ws-server"
+    "docker:build": "npm run build && docker build -t bestscooter.azurecr.io/mock-service .",
+    "docker:push": "az acr login --name bestscooter && docker push bestscooter.azurecr.io/mock-service"
   },
   "nodemonConfig": {
     "watch": [
