--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
+    "@turf/helpers": "^6.5.0",
     "dotenv": "^16.3.1",
     "jet-logger": "^1.3.1",
     "jet-paths": "^1.0.6",
@@ -37,12 +38,14 @@
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "random-points-on-polygon": "^0.0.4",
     "ts-command-line-args": "^2.5.1",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/find": "^0.2.4",
     "@types/fs-extra": "^11.0.4",
+    "@types/geojson": "^7946.0.13",
     "@types/jasmine": "^5.1.4",
     "@types/jsonfile": "^6.1.4",
     "@types/jsonwebtoken": "^9.0.5",
