--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@turf/helpers": "^6.5.0",
     "dotenv": "^16.3.1",
+    "geolib": "^3.3.4",
     "jet-logger": "^1.3.1",
     "jet-paths": "^1.0.6",
     "jet-validator": "^1.1.1",
@@ -38,6 +39,7 @@
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "openrouteservice-js": "^0.3.2",
     "random-points-on-polygon": "^0.0.4",
     "ts-command-line-args": "^2.5.1",
     "websocket": "^1.0.34"
