--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
-    "@turf/helpers": "^6.5.0",
+    "@turf/turf": "^6.5.0",
     "dotenv": "^16.3.1",
     "geolib": "^3.3.4",
     "jet-logger": "^1.3.1",
@@ -52,6 +52,7 @@
     "@types/jsonfile": "^6.1.4",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
+    "@types/turf": "^3.5.32",
     "@types/websocket": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
