mostly working with various strategies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,10 +70,12 @@
         "src/*"
       ],
     },
-    "useUnknownInCatchVariables": false
+    "useUnknownInCatchVariables": false,
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.json",
     "spec/**/*.ts",
     "types/**/*.d.ts",
     "build.ts"
