--- a/env/development.env
+++ b/env/development.env
@@ -21,7 +21,7 @@ ADMIN_PASSWORD=chefen
 WS_HOST=ws://localhost:8081/
 
 ## Simulation settings ##
-NR_OF_CUSTOMERS=1
+NR_OF_CUSTOMERS=100
 REFRESH_DELAY=5000 # unit is ms
-# WALKING_SPEED=1.4 # unit is m/s
-WALKING_SPEED=50
+WALKING_SPEED=1.4 # unit is m/s
+SPEED_MULTIPLIER=35
