fix race conditions in strategy execution

--- a/env/development.env
+++ b/env/development.env
@@ -21,7 +21,8 @@ ADMIN_PASSWORD=chefen
 WS_HOST=ws://localhost:8081/
 
 ## Simulation settings ##
-NR_OF_CUSTOMERS=100
+NR_OF_CUSTOMERS=1
 REFRESH_DELAY=5000 # unit is ms
-WALKING_SPEED=1.4 # unit is m/s
-SPEED_MULTIPLIER=1
+# WALKING_SPEED=1.4 # unit is m/s
+WALKING_SPEED=5
+SPEED_MULTIPLIER=10
