randomise customer walking speeds, continually check zone max speed during trips

--- a/env/development.env
+++ b/env/development.env
@@ -21,8 +21,9 @@ ADMIN_PASSWORD=chefen
 WS_HOST=ws://localhost:8081/
 
 ## Simulation settings ##
-NR_OF_CUSTOMERS=1
+NR_OF_CUSTOMERS=1000
+NR_OF_SMART_CUSTOMERS=10
+NR_OF_PREPARED_CUSTOMERS=200
 REFRESH_DELAY=5000 # unit is ms
-# WALKING_SPEED=1.4 # unit is m/s
-WALKING_SPEED=5
-SPEED_MULTIPLIER=10
+WALKING_SPEED=1.4 # unit is m/s
+SPEED_MULTIPLIER=5
