added updating parkings in the database on scooter instansiation and trip start/end

--- a/env/development.env
+++ b/env/development.env
@@ -21,6 +21,7 @@ ADMIN_PASSWORD=chefen
 WS_HOST=ws://localhost:8081/
 
 ## Simulation settings ##
+NR_OF_SCOOTERS=1000
 NR_OF_CUSTOMERS=1000
 NR_OF_SMART_CUSTOMERS=10
 NR_OF_PREPARED_CUSTOMERS=200
