modify to alt simulation

--- a/env/development.env
+++ b/env/development.env
@@ -25,6 +25,8 @@ NR_OF_SCOOTERS=1
 NR_OF_CUSTOMERS=1
 NR_OF_SMART_CUSTOMERS=10
 NR_OF_PREPARED_CUSTOMERS=200
+NR_OF_STATIONARY_SCOOTERS=10
+NR_OF_PREPARED_SCOOTERS=200
 REFRESH_DELAY=5000 # unit is ms
 WALKING_SPEED=1.4 # unit is m/s
 SPEED_MULTIPLIER=15
