--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec",
     "docker:build": "npm run build && docker build -t missivaeak/bestscooter_mock-service:alt .",
     "docker:push": "docker push missivaeak/bestscooter_mock-service:alt",
-    "docker:build:acr": "npm run build && docker build -t bestscooter.azurecr.io/mock-service .",
-    "docker:push:acr": "az acr login --name bestscooter && docker push bestscooter.azurecr.io/mock-service"
+    "docker:build:acr": "npm run build && docker build -t bestscooter.azurecr.io/mock-service:alt .",
+    "docker:push:acr": "az acr login --name bestscooter && docker push bestscooter.azurecr.io/mock-service:alt"
   },
   "nodemonConfig": {
     "watch": [
